--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,3 +15,21 @@
     background-color: #7c940ea1;
     border-color: #0000ff;
   }
+
+  .page-header {
+    color: #cc580c;
+    background-color: #cc580c;
+    background-image: linear-gradient(120deg, #ffd966, #cc580c);
+  
+    @include large {
+      padding: 5rem 6rem;
+    }
+  
+    @include medium {
+      padding: 3rem 4rem;
+    }
+  
+    @include small {
+      padding: 2rem 1rem;
+    }
+  }
