--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,20 +4,20 @@
 @import "{{ site.theme }}";
 
   .btn {
-    color: #0000ff;
-    border-color: #0000ff; 
+    color: #ff0000;
+    border-color: #ff0000; 
     // background-color: #008CBA;
   } 
 
   .btn:hover {
     color: #0bb6e1cc;
     text-decoration: none;
-    background-color: #7c940ea1;
-    border-color: #0000ff;
+    background-color: #f1c232;
+    border-color: #ff0000;
   }
 
   .page-header {
-    color: #cc580c;
+    color: #ffffff;
     background-color: #cc580c;
     background-image: linear-gradient(120deg, #ffd966, #cc580c);
   
@@ -32,4 +32,13 @@
     @include small {
       padding: 2rem 1rem;
     }
+  }
+
+  body {
+    padding: 0;
+    margin: 0;
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #ee7f00;
   }
