--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -34,11 +34,27 @@
     }
   }
 
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    font-weight: normal;
+    color: #ee7f00;
+  }
+
   body {
     padding: 0;
     margin: 0;
     font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
     line-height: 1.5;
-    color: #ee7f00;
+    color: #000000;
+  }
+
+  footer {
+    display: none !important;
   }
