--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -34,17 +34,7 @@
     }
   }
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    margin-top: 2rem;
-    margin-bottom: 1rem;
-    font-weight: normal;
-    color: #ee7f00;
-  }
+  
 
   body {
     padding: 0;
@@ -53,6 +43,18 @@
     font-size: 16px;
     line-height: 1.5;
     color: #000000;
+  }
+
+  #firefly {
+    color: #ee7f00
+  }
+
+  #our-mission {
+    color: #ee7f00
+  }
+
+  #project-description {
+    color: #ee7f00
   }
 
   footer {
