--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,15 +46,39 @@
     background-color: #dddddd;
   }
 
-  #firefly {
-    color: #ee7f00
-  }
-
   #our-mission {
     color: #ee7f00
   }
 
   #project-description {
+    color: #ee7f00
+  }
+
+  #inspiration {
+    color: #ee7f00
+  }
+
+  #what-it-does {
+    color: #ee7f00
+  }
+
+  #how-we-built-it {
+    color: #ee7f00
+  }
+
+  #challenges-we-ran-into {
+    color: #ee7f00
+  }
+
+  #accomplishments-that-were-proud-of {
+    color: #ee7f00
+  }
+
+  #what-we-learned {
+    color: #ee7f00
+  }
+
+  #whats-next-for-firefly {
     color: #ee7f00
   }
 
