--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -34,7 +34,12 @@
     }
   }
 
-  
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
 
   body {
     padding: 0;
